# obs-overlay

./: .env  .env.dev  .env.prod  .env.test  .gitignore  README.md  docker-compose.yml  mprocs.yaml  notes.md
backend/: .env  dockerfile
backend/migrations/2024-04-24-233819_create_widget_position/: down.sql  up.sql
backend/migrations/2024-04-25-001732_update_widgets/: up.sql
backend/src/: main.rs
frontend/: TODO.md  dockerfile  nuxt.config.ts  package.json
frontend/composables/: fetch_objects.ts
frontend/layouts/: AboutPageLayout.vue  HomePageLayout.vue
frontend/pages/: index.vue  kay.vue  overlay.vue
frontend/pages/about/: index.vue
frontend/plugins/: debug.ts  mouseMovement.ts  vuetify.ts
frontend/stores/: targetStore.ts
obs-overlay-backend/: .env  Cargo.toml
obs-overlay-backend/src/: database.rs  main.rs
redis/: redis.conf
services/backend/: .env  Cargo.toml  diesel.toml  dockerfile
services/backend/migrations/2024-05-12-060339_object/: down.sql  up.sql
services/backend/migrations/2024-06-14-012358_update_object/: up.sql
services/backend/migrations/2024-06-14-032940_create_new_object/: up.sql
services/backend/migrations/2024-08-04-185012_add_opacity_column/: down.sql  up.sql
services/backend/migrations/2024-08-05-011230_add_blur_column/: up.sql
services/backend/src/: main.rs  schema.rs
services/backend/src/handlers/database/: database.rs  mod.rs  models.rs  redis_db.rs  schema.rs
services/backend/src/handlers/server/: files.rs  mod.rs  routes.rs  test_route.rs
services/backend/src/handlers/server/events/: mod.rs  on_delete.rs  on_run.rs  on_update.rs  on_upload.rs
services/backend/src/handlers/server/events/tasks/: mod.rs  redis_tasks.rs
services/backend/src/handlers/server/utils/: constants.rs  csrf.rs  file_utils.rs  mod.rs  parse.rs
services/backend/src/handlers/server/websocket/: message.rs  mod.rs  socket.rs
services/database/: dockerfile  init.sql
services/nginx/: nginx.conf
tests/: imagetest.sh  main.py
(+50 files in other folders)
