[package]
name = "obs-overlay-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# diesel = { version = "2.1.6", features = ["postgres"] }
dotenvy = "0.15.7"
actix-files = "0.6.5"
actix-multipart = "0.6.1"
actix-web = "4.2.1"
futures-util = "0.3.30"
tokio = { version = "1.37.0", features = ["fs", "full"] }
actix-cors = "0.7.0"
serde_json = "1.0.117"
diesel = { version = "2.1.6", features = ["postgres", "r2d2"] }
serde = { version = "1.0.201", features = ["derive"] }
