[package]
name = "obs-overlay-backend"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
panic = 'abort'


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
actix-files = "0.6.5"
actix-multipart = "0.7.2"
actix-web = "4.2.1"
futures-util = "0.3.30"
tokio = { version = "1.37.0", features = ["fs", "full"] }
actix-cors = "0.7.0"
serde_json = "1.0.117"
diesel = { version = "2.2.3", features = ["postgres", "r2d2"] }
serde = { version = "1.0.201", features = ["derive"] }
redis = { version = "0.26.1", features = ["tokio-comp"] }
percent-encoding = "2.3.1"
rand = "0.8.5"
actix-web-actors = "4.3.0"
actix = "0.13.5"
lazy_static = "1.4.0"
actix-rt = "2.10.0"
